Add unit tests for the "Path Sum II" problem.